--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3510,3 +3510,10 @@ input, select, textarea {
 			}
 
 	}
+.lady {
+  position: relative;
+  left: -9em;
+  height: 19em;
+  margin-bottom: -4em;
+  margin-top: -6em;
+}
