--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2914,7 +2914,7 @@ input, select, textarea {
 
 	#header {
 		padding: 9em 0 9em 0 ;
-		background-color: #394B4E;
+		background-color: #b20e3f;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,fixed,fixed;
 		background-position: top left,center center,center center;
