--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3522,7 +3522,7 @@ input, select, textarea {
 
 .perfume-base-btn {
 	background: #b20e3f;
-	color: #fff
+	color: #fff;
 	padding: 10% 10px;
 	margin-left: 10%;
 	font-size: 30px;
