--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3521,9 +3521,13 @@ input, select, textarea {
 }
 
 .perfume-base-btn {
-	background: #b20e3f;
-	color: #fff;
-	padding: 10% 10px;
-	margin-left: 10%;
-	font-size: 30px;
+    background: #b20e3f;
+    color: #fff;
+    padding: 20px 33px;
+    margin: 10px 30%;
+    font-size: 30px;
+    width: 100%;
+    display: block;
+    border-radius: 10%;
+    border: 2px solid darkred;
 }
