--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3524,7 +3524,8 @@ input, select, textarea {
     background: #b20e3f;
     color: #fff;
     padding: 26px 40px;
-    font-size: 2.3vw;
+    font-size: 2em;
+    margin-bottom: 1em;
     width: 100%;
     display: block;
     border: 2px solid darkred;
